# BetterThanDocumentation

./: README.md  README.rst  conf.py  config.py  mkdocs.yml  pyproject.toml
docs/: ID_ranges.md  about.md  basic_setup.md  contributors.md  index.md  modding_infrastructure.md  quickstart.md  requirements.txt  select_ide.md
docs/7.2/: index.md
docs/7.2/blocks/: adding_blocks.md  dragonfly.md  terrain_api.md
docs/7.2/hud/: hud_elements.md
docs/7.2/items/: items.md  tools.md  weapons.md
docs/7.2/miscellaneous/: recipes.md
docs/7.2/ui/: basic_idea.md
docs/7.3/: changelog.md  index.md  items.md  sounds.md
docs/7.3/blocks/: block_builder.md  introduction.md  logic.md  model.md  tile_entities.md
docs/7.3/commands/: commands.md  examples.md
docs/7.3/entities/: entity_methods.md
docs/7.3/miscellaneous/: recipes.md  sounds.md
docs/7.3/mixins/: mixin_tricks.md  mixins.md
docs/7.3/mod_configuration/: config_files.md  gamerules.md  mod_configuration.md
docs/7.3/recipes/: recipes.md
docs/7.3/ui/: basic_idea.md  introduction.md
docs/assets/: checkIDRange.js  custom.css
docs/source/: conf.py  faq.rst  index.rst  publishing.rst
