[project]
name = "Better-than-Documentation"
version = "7.2.0"
description = ""
readme = "README.rst"
requires-python = ">=3.13"
dependencies = [
    "poethepoet>=0.37.0",
    "mkdocs~=1.6",
    "jinja2~=3.1",
    "markdown~=3.2",
    "pygments~=2.16",
    "pymdown-extensions~=10.2"
]

[tool.poe.tasks]
dev = "mkdocs serve"
